using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isInteracting = "isInteracting";
    internal static string isTalking = "isTalking";
    internal static string canMove = "canMove";
    internal static string openTransition = "openTransition";
    internal static string closeTransition = "closeTransition";
    internal static string isTransitioning = "isTransitioning";
    internal static string isLoading = "isLoading";

}
